--- a/public/404.html
+++ b/public/404.html
@@ -58,8 +58,8 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
+      <h1>Такая страница не существует.</h1>
+      <p>Если вы уверены, что адрес верный, то просим сообщить нам</p>
     </div>
     <p>If you are the application owner check the logs for more information.</p>
   </div>
